--- a/packages/features/tailwind-component-test/src/lib/tailwind-component-test/tailwind-component-test.css
+++ b/packages/features/tailwind-component-test/src/lib/tailwind-component-test/tailwind-component-test.css
@@ -1,6 +1,7 @@
 @reference "tailwindcss";
+@reference "../../../../../../apps/angular-app/src/theme.css";
 
 .testa {
-    @apply bg-yellow-500 p-10 m-10 rounded-lg border-2 border-yellow-800
-        text-orange-500 text-4xl underline;
+    @apply bg-brand-500 p-10 m-10 rounded-lg border-2 border-brand-900
+        text-brand-800 text-4xl underline;
 }
