--- a/apps/angular-app/src/styles.css
+++ b/apps/angular-app/src/styles.css
@@ -1,4 +1,4 @@
 @import 'tailwindcss';
-@import './theme.css';
+@reference './theme.css';
 
 /* You can add global styles to this file, and also import other style files */
