--- a/packages/features/tailwind-component-test/src/lib/tailwind-component-test/tailwind-component-test.css
+++ b/packages/features/tailwind-component-test/src/lib/tailwind-component-test/tailwind-component-test.css
@@ -3,5 +3,5 @@
 
 .testa {
     @apply bg-brand-500 p-10 m-10 rounded-lg border-2 border-brand-900
-        text-brand-800 text-4xl underline;
+        text-brand-800 text-6xl text-center underline;
 }
